@@ -70,6 +70,11 @@ Library
 - Issue #7457: added a read_pkg_file method to
   distutils.dist.DistributionMetadata.
 
+C-API
+-----
+
+- Issue #7033: function ``PyErr_NewExceptionWithDoc()`` added.
+
 Build
 -----
 
